--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" /> -->
-  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" /> -->
-  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" /> -->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>GetGEOLocationByForm</title>
@@ -15,14 +11,9 @@
 
 <body>
   <!-- <div id="root"></div> -->
-  <div id="map" style="width:100%; height: 100vh"></div>
-  <!-- <div id="root" style="width:100%; height: 100vh"></div> -->
+  <!-- <div id="map"></div> -->
+  <div id="root" style="width:100%; height: 100vh"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
-
-<!-- <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script> -->
-<!-- <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script> -->
-<!-- <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script> -->
 
 </html>
